...
            systemImageName: "square.and.pencil")
        AppShortcut(
            intent: StartRoutineIntent(),
            phrases: [
                "Start a workout in \(.applicationName)",
            ],
            shortTitle: "Start Workout",
            systemImageName: "dumbbell")
        AppShortcut(
            intent: OpenModuleIntent(),
            phrases: [
                "Open a \(.applicationName) app",
            ],
...
